--- a/语气.md
+++ b/语气.md
@@ -29,3 +29,30 @@
 - 如果我有时间，我会去看望你的。（If I had time, I would visit you.）
 
 总结：动词语气是语法中一个重要的概念，可以帮助我们在表达中更准确地传达自己的意图和情感。在不同的语境中，使用不同的动词语气可以使我们的语言更加丰富和灵活。理解动词语气对于学习外语和进行有效的交流都是至关重要的。
+
+## 虚拟语气
+
+虚拟语气表“不可能”的假设
+
+**与现在相反**
+
+条件句：过去式
+主句：would+动词原形
+
+If I knew it, I would tell you.
+
+**与将来相反**
+
+条件句：should + 动词原形
+主句：would + 动词原形
+
+If should meet thee after long years, how should I greet thee?
+
+**与过去相反**
+
+条件句：had + 动词过去分词
+主句：would have + 动词过去分词
+
+If I had watched this video before, I would have aced my test.
+
+虚拟语气表达愿望，请求，建议，命令，等
