--- a/语气.md
+++ b/语气.md
@@ -56,3 +56,12 @@ If should meet thee after long years, how should I greet thee?
 If I had watched this video before, I would have aced my test.
 
 虚拟语气表达愿望，请求，建议，命令，等
+
+wish
+
+- 与现在相反：wish + 过去式
+- 与过去相反：wish + 过去完成式
+- 与将来相反：wish + would/should/could/might + 动词原形
+
+demand, suggest, insist, would rather...+ (should) + 动词原形
+
