--- a/名词从句.md
+++ b/名词从句.md
@@ -1,6 +1,62 @@
 # 名词从句
 
 ## 主语从句
+
+主语从句（Subject Clause），也称为名词性从句（Noun Clause），是一个句子中作为主语的从句。它在句子中充当一个名词的角色，可以用来代替一个名词或名词短语，从而使句子更加简洁和清晰。主语从句通常由连接词引导，常见的连接词有：that, whether, if, who, what, where, when, why等。
+
+引导词 that
+引导词 疑问代（副）词 whether where when how who what
+
+下面详细解释主语从句的用法和一些例子：
+
+1. 使用“that”引导的主语从句：
+   - That he is late is not surprising.（他迟到并不令人惊讶。）
+   - That she loves you is evident.（她爱你是显而易见的。）
+
+2. 使用“whether/if”引导的主语从句（用于表示“是否”）：
+   - Whether he will come to the party is uncertain.（他是否会来参加派对还不确定。）
+   - If she can finish the project on time is still unknown.（她能否按时完成项目还是未知的。）
+
+3. 使用“who/whom”引导的主语从句（用于表示人）：
+   - Who will be the next president is a topic of discussion.（谁将成为下一任总统是一个讨论的话题。）
+   - Whom she invited to the event is not known.（她邀请了谁参加这个活动还不清楚。）
+
+4. 使用“what”引导的主语从句（用于表示事物或抽象概念）：
+   - What he said is true.（他说的是真的。）
+   - What they did surprised everyone.（他们所做的让每个人都感到惊讶。）
+
+5. 使用“where”引导的主语从句（用于表示地点）：
+   - Where we go for vacation is up to you.（我们去哪里度假由你决定。）
+   - Where he lives has always been a mystery.（他住在哪里一直是个谜。）
+
+6. 使用“when”引导的主语从句（用于表示时间）：
+   - When the concert starts is not yet announced.（音乐会何时开始尚未宣布。）
+   - When we meet again is uncertain.（我们何时再次见面还不确定。）
+
+7. 使用“why”引导的主语从句（用于表示原因）：
+   - Why he did that remains a mystery.（他为什么这样做仍然是个谜。）
+   - Why she left the company is unclear.（她为什么离开公司还不清楚。）
+
+**形式主语**
+
+当谈论天气或天气状况时，通常使用形式主语"it"：
+
+1. It is raining.（下雨了。）
+2. It is snowing heavily.（大雪纷飞。）
+
+形式主语在描述季节、距离和时间等方面也很常见：
+
+3. It is summer now.（现在是夏天。）
+4. It is still a long way to the top of the mountain.（到山顶还有很长的路。）
+5. It is already midnight.（现在已经是午夜了。）
+
+形式主语也常用于强调句子中的其他部分：
+
+6. It was John who won the first prize.（获得第一名的是约翰。）
+7. It is in this book that I found the answer.（我在这本书里找到了答案。）
+
+这些例子中的形式主语"it"没有实际指代，只是用来填充句子结构，使句子更加自然和流畅。
+
 ## 宾语从句
 ## 表语从句
 ## 同位语从句
