--- a/名词从句.md
+++ b/名词从句.md
@@ -58,6 +58,39 @@
 这些例子中的形式主语"it"没有实际指代，只是用来填充句子结构，使句子更加自然和流畅。
 
 ## 宾语从句
+
+宾语从句是复合句的一种结构，用来充当主句中的动词或其他表示动作、状态、观点等的词语的宾语。宾语从句通常由连接词引导，这些连接词可以是连词、关系代词或关系副词，它们将主句和从句连接在一起，形成一个完整的句子。
+
+以下是一些常见的连接词和例子，用于引导宾语从句：
+
+1. 连词：
+   - that：I know that he is coming.（我知道他要来。）that可以省略.
+   - whether/if：She asked if he had finished his homework.（她问他是否完成了作业。）
+   - whether…or not：They are discussing whether we should have a meeting or not.（他们正在讨论我们是否应该开会。）
+
+2. 关系代词：
+   - who：They are hiring someone who can speak multiple languages.（他们正在雇佣会说多种语言的人。）
+   - whom：She met a person whom she had never seen before.（她遇到了一个她以前从未见过的人。）
+   - which：I bought a book which is very interesting.（我买了一本很有趣的书。）
+   - that：This is the car that I want to buy.（这是我想买的车。）
+
+3. 关系副词：
+   - where：I don't know where he lives.（我不知道他住在哪里。）
+   - when：Tell me when you will be available.（告诉我你什么时候有空。）
+   - why：I wonder why she is upset.（我想知道她为什么心烦意乱。）
+
+在宾语从句中，主句和从句的关系是主从关系，从句在句中充当宾语的角色。宾语从句可以出现在句子的不同位置，通常放在主句动词之后，但也可以放在介词后、不定式后等。
+
+宾语从句的一些注意事项：
+
+1. 语序：宾语从句一般保持陈述语序，即主语+谓语。但在间接引语中，时态和人称可能会发生变化。
+
+2. 标点：在直接引语中，主句和从句之间使用逗号分隔；在间接引语中，通常使用连接词引导，不需要逗号分隔。
+
+3. 意义：宾语从句对于主句的意义起着补充、解释、支持等作用，帮助读者或听者更好地理解主句的内容。
+
+总之，宾语从句是复合句中的重要成分，用于丰富句子结构，增加信息量，使语言表达更加准确和丰富。
+
 ## 表语从句
 ## 同位语从句
 ## 宾语补语从句
