--- a/名词从句.md
+++ b/名词从句.md
@@ -92,5 +92,37 @@
 总之，宾语从句是复合句中的重要成分，用于丰富句子结构，增加信息量，使语言表达更加准确和丰富。
 
 ## 表语从句
+
+表语从句是复合句的一种结构，用来充当主句中的系动词后面的表语，进一步描述或说明主语的性质、状态、特点等。表语从句通常由连接词引导，这些连接词可以是连词、关系代词或关系副词，它们将主句和从句连接在一起，形成一个完整的句子。
+
+以下是一些常见的连接词和例子，用于引导表语从句：
+
+1. 连词：
+   - that：My belief is that honesty is the best policy.（我的信念是诚实是最好的策略。）
+   - whether/if：The question is whether he will come to the party.（问题是他是否会来参加聚会。）
+
+2. 关系代词：
+   - who：The winner is whoever scores the highest.（获胜者是得分最高的人。）
+   - whom：She is the one whom they elected as their leader.（她是他们选举为领袖的那个人。）
+   - which：The decision depends on which option you choose.（决定取决于你选择哪个选项。）
+   - that：The fact is that he is not coming.（事实是他不来。）
+
+3. 关系副词：
+   - where：Her concern is where they will go on vacation.（她关心的是他们将去哪里度假。）
+   - when：The problem is when we can start the project.（问题是我们什么时候可以开始这个项目。）
+   - why：The mystery is why the book suddenly disappeared.（谜团是为什么那本书突然消失了。）
+
+在表语从句中，主句的系动词和从句的谓语之间存在着一种逻辑上的等价关系，它们共同构成主谓关系。表语从句可以用来进一步描述主语的特征、状态、性质等，从而使句子更加具体和丰富。
+
+一些注意事项：
+
+1. 语序：表语从句通常保持陈述语序，即主语+谓语。
+
+2. 标点：在直接引语中，主句和从句之间使用逗号分隔；在间接引语中，通常使用连接词引导，不需要逗号分隔。
+
+3. 意义：表语从句对于主句的意义起着补充、解释、支持等作用，帮助读者或听者更好地理解主句的内容。
+
+总之，表语从句是复合句中的一种重要成分，用于进一步描述或说明主语的性质、状态、特点等，丰富了句子的表达方式。
+
 ## 同位语从句
 ## 宾语补语从句
