宾语补语从句

--- a/名词从句.md
+++ b/名词从句.md
@@ -154,3 +154,26 @@
 总之，同位语从句是一种用来进一步解释、限定或补充名词的从句结构，可以使句子更加详细和具体。在写作中，合理运用同位语从句可以丰富句子结构，使文章更加生动有趣。
 
 ## 宾语补语从句
+
+宾语补语从句（Object Complement Clause），也叫做宾语从句或复合宾语，是一个从属从句，用来进一步描述或补充及物动词的宾语。宾语补语从句通常提供了更多关于宾语的信息，可以是名词、形容词、副词等，用来完整地表达动词的意义。
+
+宾语补语从句有时可以用不同的句型来表达，取决于主句中的及物动词和其宾语。以下是一些常见的句型，用来说明宾语补语从句的不同形式：
+
+1. **名词性从句**：宾语补语从句作为一个名词，在句子中充当名词的角色，可以作为主语、宾语、表语等。
+
+   - I believe that he is telling the truth.（我相信他在说实话。）
+   - She knows what she wants.（她知道她想要什么。）
+
+2. **形容词性从句**：宾语补语从句用来描述宾语，充当形容词的角色。
+
+   - I find her very talented.（我发现她很有才华。）
+   - They consider the movie interesting.（他们认为电影很有趣。）
+
+3. **副词性从句**：宾语补语从句用来修饰动词，充当副词的角色，通常回答疑问词如何、为什么、在什么条件下等问题。
+
+   - They left earlier than I expected.（他们比我预期的要早走。）
+   - She studies so that she can pass the exam.（她学习是为了能够通过考试。）
+
+需要注意的是，宾语补语从句通常紧跟在及物动词的后面，用来完善动词的含义。不同类型的宾语补语从句提供了不同的信息，使句子更加具体、准确和丰富。同时，宾语补语从句的引导词可以是连接词（如"that"、"whether"、"if"等），也可以是疑问词（如"what"、"why"、"how"等）。
+
+总之，宾语补语从句是一种重要的从句结构，用来进一步描述或补充及物动词的宾语，丰富了句子的信息和意义。
