条件状语从句

--- a/副词从句.md
+++ b/副词从句.md
@@ -136,4 +136,38 @@ She is more beautiful than Snow White is.
 
 比较状语从句在句子中常常起到对比和强调的作用，帮助我们更清楚地表达不同事物之间的差异或相似之处。使用比较状语从句时，需要注意时态、语序和形式的正确性，以确保句子表达准确无误。
 
+### 条件状语从句
 
+条件状语从句（Conditional Adverbial Clauses）用来表示主句中的动作或状态发生的条件。这些从句通常由连词引导，如 if（如果）、unless（除非）、as long as（只要）、provided/providing（只要）、in case（以防）等等。下面是关于条件状语从句的详细解释和例句：
+
+1. **If 条件状语从句**：
+   这种类型的条件状语从句表达的是某种假设条件下的结果。
+
+   例句：If it rains tomorrow, we will stay at home.
+   翻译：如果明天下雨，我们就会呆在家里。
+
+2. **Unless 条件状语从句**：
+   "Unless" 表达的是在不满足某种条件的情况下，会出现的结果。
+
+   例句：Unless you study harder, you won't pass the exam.
+   翻译：除非你更努力学习，否则你不会通过考试。
+
+3. **As Long As 条件状语从句**：
+   "As long as" 表示只要满足某个条件，就会发生某个结果。
+
+   例句：You can borrow my car as long as you promise to drive carefully.
+   翻译：只要你答应小心驾驶，你可以借我的车。
+
+4. **Provided/Providing 条件状语从句**：
+   "Provided" 或 "Providing" 表示在满足某个条件的情况下，会出现某个结果。
+
+   例句：I will come to the party, provided/providing I finish my work on time.
+   翻译：我会来参加聚会，前提是我按时完成工作。
+
+5. **In Case 条件状语从句**：
+   "In case" 表示为了防止某种情况发生，会采取某种行动。
+
+   例句：Take an umbrella in case it rains.
+   翻译：带把伞，以防下雨。
+
+条件状语从句可以在句子中表达不同的条件和结果，帮助我们描述各种可能的情况。使用这些从句时，需要注意时态、语序和语法规则，以确保句子的逻辑和语法正确。
