--- a/副词从句.md
+++ b/副词从句.md
@@ -201,3 +201,29 @@ She is more beautiful than Snow White is.
    翻译：无论她多么努力，她都无法解开这个谜题。
 
 让步状语从句帮助我们在句子中表达出两种相对立的情况，强调主句中的情况尽管存在，但仍然受到从句中情况的影响。使用这些从句时，需要注意时态、语序和语法规则，以确保句子的逻辑和语法正确。
+
+## 方式状语
+
+方式状语从句是复合句的一种，用来描述主句中的动作是以何种方式、方式或方法发生的。它们通常由连接词引导，例如 "as," "as if," "as though," "like," "the way" 等等。
+
+这里有一些详细信息和例句：
+
+1. **引导词**：
+   - **as**：用来引导方式状语从句，例如："She sings as if she's on stage."（她唱歌的样子好像在舞台上一样。）
+   - **as if / as though**：用于引导表示虚拟或假设情况的方式状语从句，例如："He acted as though he knew the secret."（他的行为好像他知道这个秘密一样。）
+   - **like**：用来进行类比，例如："She eats like a bird."（她吃饭的样子像只小鸟。）
+   - **the way**：强调方式，例如："He solved the puzzle the way his teacher taught him."（他按照老师教的方法解决了这个谜题。）
+
+2. **位置**：方式状语从句可以放在主句之前或之后，视语境而定。
+
+3. **虚拟语气**：有时，方式状语从句可以使用虚拟语气来表达假设或非现实情况。例如："She looked at him as if he were a ghost."（她看着他，好像他是个鬼一样。）
+
+4. **语序**：方式状语从句的语序通常与主句一致。如果主句是肯定句，从句也是肯定句；如果主句是否定句，从句也是是否定句。
+
+下面是更明确的例句，以帮助你更好地理解方式状语从句：
+
+1. She ran as if she were being chased by a lion.（她跑步的样子好像被狮子追赶一样。）
+2. He spoke to her as though she were a queen.（他和她说话的方式好像她是女王一样。）
+3. The children played soccer like they were professionals.（孩子们踢足球的样子像是专业球员一样。）
+4. She cooked the meal the way her grandmother used to.（她烹饪这顿饭的方式就像她祖母过去常常做的那样。）
+
