--- a/副词从句.md
+++ b/副词从句.md
@@ -202,7 +202,7 @@ She is more beautiful than Snow White is.
 
 让步状语从句帮助我们在句子中表达出两种相对立的情况，强调主句中的情况尽管存在，但仍然受到从句中情况的影响。使用这些从句时，需要注意时态、语序和语法规则，以确保句子的逻辑和语法正确。
 
-## 方式状语
+## 方式状语从句
 
 方式状语从句是复合句的一种，用来描述主句中的动作是以何种方式、方式或方法发生的。它们通常由连接词引导，例如 "as," "as if," "as though," "like," "the way" 等等。
 
@@ -227,3 +227,33 @@ She is more beautiful than Snow White is.
 3. The children played soccer like they were professionals.（孩子们踢足球的样子像是专业球员一样。）
 4. She cooked the meal the way her grandmother used to.（她烹饪这顿饭的方式就像她祖母过去常常做的那样。）
 
+## 原因状语从句
+
+原因状语从句（Adverbial Clauses of Reason）是复合句的一种类型，用来解释或说明主句中的动作、事件或情况发生的原因。这种从句提供了为什么或因为什么的信息。原因状语从句通常由一些连接词引导，例如 "because," "since," "as," "due to," "owing to" 等等。
+
+以下是原因状语从句的详细解释：
+
+1. **引导词**：原因状语从句通常由如下连词引导：
+   - because 实实在在的因果关系 > since 大家都已经知道的情况，众所周知 > as 显而易见的事实
+   - **because**：例如，“She couldn't attend the party because she was feeling unwell.”（她不能参加派对，因为她感觉不舒服。）
+   - **since**：例如，“Since it was raining heavily, we decided to stay indoors.”（因为雨下得很大，我们决定待在室内。）
+   - **as**：例如，“As I was running late, I missed the bus.”（因为我赶时间，所以错过了公交车。）
+   - **due to** / **owing to**：例如，“The game was canceled due to bad weather.”（比赛因为天气恶劣被取消。）
+
+2. **位置**：原因状语从句通常放在主句之后。但有时，它们可以放在主句之前以引起注意或强调原因。because前后都可以，since as 放前面。
+
+3. **语序**：原因状语从句的语序通常与主句一致。如果主句是肯定句，从句也是肯定句；如果主句是否定句，从句也是是否定句。
+
+4. **注意事项**：
+   - 原因状语从句揭示了为什么某事发生，它提供了背后的原因或解释。
+   - 有时，原因状语从句可以与结果状语从句结合使用，以表示因果关系。
+   - 如果原因状语从句的信息不是主要信息，可以用逗号与主句隔开。
+
+以下是一些例句来说明原因状语从句的使用：
+
+1. She couldn't attend the meeting because she had a doctor's appointment.（她不能参加会议，因为她有个医生预约。）
+2. Since he forgot his umbrella, he got wet in the rain.（因为他忘了带伞，他在雨中淋湿了。）
+3. As the traffic was heavy, they arrived late to the event.（因为交通繁忙，他们晚到了活动现场。）
+4. The flight was delayed due to technical problems.（航班因为技术问题被延误了。）
+
+这些例句展示了原因状语从句如何用来解释动作、事件或情况的原因，以及如何使用不同的引导词来表达不同的因果关系。
