目的状语从句

--- a/副词从句.md
+++ b/副词从句.md
@@ -257,3 +257,33 @@ She is more beautiful than Snow White is.
 4. The flight was delayed due to technical problems.（航班因为技术问题被延误了。）
 
 这些例句展示了原因状语从句如何用来解释动作、事件或情况的原因，以及如何使用不同的引导词来表达不同的因果关系。
+
+## 目的状语从句
+
+目的状语从句（Adverbial Clauses of Purpose）是复合句的一种类型，用于说明主句中的动作或情况的目的或目标。这种从句描述了为了什么目的而进行某项动作。目的状语从句通常由一些连接词引导，如 "so that," "in order to," "lest," "for fear that" 等等。
+
+以下是目的状语从句的详细解释：
+
+1. **引导词**：目的状语从句通常由如下连词引导：
+   - **so that**：例如，“She studies hard so that she can get good grades.”（她努力学习，以便能获得好成绩。）
+   - **in order to**：例如，“He exercises daily in order to stay healthy.”（他每天锻炼，以便保持健康。）
+   - **lest**：例如，“He speaks softly lest he disturb the baby.”（他小声说话，以免吵醒婴儿。）
+   - **for fear that**：例如，“They locked the door for fear that someone might enter.”（他们锁上门，以免有人进来。）
+
+2. **位置**：目的状语从句通常放在主句之后。但有时，它们可以放在主句之前以引起注意或强调目的。
+
+3. **语序**：目的状语从句的语序通常与主句一致。如果主句是肯定句，从句也是肯定句；如果主句是否定句，从句也是否定句。
+
+4. **注意事项**：
+   - 目的状语从句表达了为了达成某种目标而进行某项动作的意图。
+   - 在语气上，目的状语从句通常表达出一种目的明确、明确的意图。
+   - 目的状语从句可以与其他类型的从句（如结果状语从句）一起使用，以在句子中传达更复杂的意思。
+
+以下是一些例句来说明目的状语从句的使用：
+
+1. She studies hard so that she can pass the exam.（她努力学习，以便能通过考试。）
+2. In order to improve his skills, he takes online courses.（为了提高他的技能，他上在线课程。）
+3. He speaks quietly lest he wake up the baby.（他小声说话，以免吵醒婴儿。）
+4. They locked the windows for fear that thieves might break in.（他们锁上窗户，以免小偷进来。）
+
+这些例句展示了目的状语从句如何用于表达为了达成某个目标而进行某项动作的意图，以及如何使用不同的引导词来表达不同的目的关系。
