结果状语从句

--- a/副词从句.md
+++ b/副词从句.md
@@ -287,3 +287,32 @@ She is more beautiful than Snow White is.
 4. They locked the windows for fear that thieves might break in.（他们锁上窗户，以免小偷进来。）
 
 这些例句展示了目的状语从句如何用于表达为了达成某个目标而进行某项动作的意图，以及如何使用不同的引导词来表达不同的目的关系。
+
+## 结果状语从句
+
+结果状语从句（Adverbial Clauses of Result）是复合句的一种类型，用于说明主句中的动作、情况或事件的结果。这种从句描述了某个行动或情况的结果，通常表示因果关系。结果状语从句通常由一些连接词引导，如 "so... that," "such... that," "so much/many/few/little that" 等等。
+
+以下是结果状语从句的详细解释：
+
+1. **引导词**：结果状语从句通常由如下连词引导：
+   - **so... that**：例如，“It was raining so heavily that we couldn't go outside.”（雨下得太大，我们无法出去。）
+   - **such... that**：例如，“She had such a loud voice that everyone could hear her.”（她声音太大了，每个人都能听见她。）
+   - **so much/many/few/little that**：例如，“He ate so much that he couldn't move.”（他吃得太多，无法动弹。）
+
+2. **位置**：结果状语从句通常放在主句之后，以表示主句中动作或情况的结果。
+
+3. **语序**：结果状语从句的语序通常与主句一致。如果主句是肯定句，从句也是肯定句；如果主句是否定句，从句也是否定句。
+
+4. **注意事项**：
+   - 结果状语从句表达了某个行动或情况的结果，通常与主句之间存在因果关系。
+   - 结果状语从句可以与其他类型的从句（如目的状语从句）一起使用，以在句子中传达更复杂的意思。
+   - 这种从句有时可以通过使用副词或形容词来增加细节，以便更准确地描述结果。
+
+以下是一些例句来说明结果状语从句的使用：
+
+1. The movie was so interesting that we watched it twice.（电影非常有趣，我们看了两遍。）
+2. She sang such a beautiful song that the audience applauded loudly.（她唱了一首如此美妙的歌，观众都热烈鼓掌。）
+3. He had so little time that he couldn't finish the project.（他时间太少，无法完成这个项目。）
+4. The problem was so complex that it took us days to solve it.（问题太复杂了，我们花了几天才解决。）
+
+这些例句展示了结果状语从句如何用于描述某个行动或情况的结果，以及如何使用不同的引导词和修饰词来表达不同的结果关系。
