非谓语动词

--- a/动词.md
+++ b/动词.md
@@ -5,3 +5,35 @@
 3. 双及物动词 - 主语+动词+间接宾语+直接宾语
 4. 复杂及物动词 - 主语+动词+宾语+（宾语）补语
 5. （连）系动词 - 主语+动词+（主语）补语（表语）
+
+## 谓语动词的“三大本领” “时（时间）体（状态）气（假设，情感等）”
+
+谓语动词也叫限定性动词
+
+**表示动作的时间**
+
+1. 现在
+2. 过去
+3. 将来
+4. 从过去某个时间点”算将来“（过去将来）
+
+## 非谓语动词
+
+非谓语动词也叫非限定性动词
+
+非谓语动词是指动词的非限定形式，不受主语的人称和数的限制，可以作为句子中的其他成分，如主语、宾语、状语等。英语中的非谓语动词包括动词的三种基本形式：不定式（infinitive）、动名词（gerund）和过去分词（past participle）。下面是关于这三种形式的更详细解释：
+
+1. **不定式（Infinitive）：** 不定式是动词的原形，通常带有 "to"。在句子中可以作为动词的宾语、目的状语、目的补语等。例如：
+   - She wants **to dance** at the party. （不定式作为目的状语）
+   - His goal is **to become** a doctor. （不定式作为目的补语）
+
+2. **动名词（Gerund）：** 动名词是动词加上 "-ing" 形式的结尾，可以作为名词的形式出现在句子中，通常作为主语、宾语、介词的宾语等。例如：
+   - **Swimming** is good exercise. （动名词作为主语）
+   - I enjoy **reading** books. （动名词作为宾语）
+
+3. **过去分词（Past Participle）：** 过去分词通常用于完成时态和被动语态的构成，也可以作为形容词。例如：
+   - She has **written** a novel. （过去分词用于完成时态）
+   - The broken vase needs to be **repaired**. （过去分词用于被动语态）
+   - The **broken** vase is on the table. （过去分词作为形容词）
+
+这些非谓语动词形式在句子中的使用具有一定的语法和语义特点，需要根据上下文和句子结构来正确运用。
