--- a/动词.md
+++ b/动词.md
@@ -27,6 +27,66 @@
    - She wants **to dance** at the party. （不定式作为目的状语）
    - His goal is **to become** a doctor. （不定式作为目的补语）
 
+> 省略to
+
+在英语中，不定式（infinitive）通常以"to"开头，但有些情况下可以省略"to"。以下是一些情况：
+
+   1. **情态动词后**：当不定式跟在情态动词（modal verbs）如can, could, may, might, will, would, shall, should, must等后面时，通常省略"to"。例如：
+      - She can swim.（可以省略："She can to swim."）
+      - He must go now.（可以省略："He must to go now."）
+
+   2. **感官动词后**：感官动词（sensory verbs）如see, hear, feel, watch, notice等后面，不定式也可以省略"to"。例如：
+      - I saw him go.（可以省略："I saw him to go."）
+      - She heard the birds sing.（可以省略："She heard the birds to sing."）
+
+   3. **让步状语从句中**：在让步状语从句中，不定式常常省略"to"。例如：
+      - He was too tired to walk.（不定式不省略）
+      - He was so tired he couldn't walk.（不定式省略）
+
+   4. **动词感官性的用法**：有些动词在特定情况下可以用作感官性动词，此时不定式也可以省略"to"。这些动词包括make, let, have等。例如：
+      - She made him sing.（可以省略："She made him to sing."）
+      - They had him explain.（可以省略："They had him to explain."）
+
+需要注意的是，这些规则有时会因上下文而变化，所以在一些情况下，省略"to"可能不合适。但是，上述情况是一般的使用规则，通常可以作为参考。
+
+> 不定式在句子中的语法成分和句子结构
+
+1. **主语**：不定式可以用作句子的主语，通常出现在句子的开头。例如：
+   - "To learn a new language is challenging."
+   - 形式主语 "It is challenging to learn a new language." it is 形容词 + for sb. + to do sth.
+
+2. **宾语**：不定式可以用作动词的宾语。例如：
+   - "She wants to travel."
+   - "I like to read."
+
+3. **主语补语**：不定式可以用来补充说明主语。例如：
+   - "His goal is to become a doctor."
+
+4. **形容词补语**：不定式可以用作形容词的补语，用来描述名词。例如：
+   - "She is eager to learn."
+
+5. **副词补语**：不定式可以用作副词的补语，用来修饰动词、形容词、或副词。例如：
+   - "She runs fast to win the race."
+   - "He worked hard to succeed."
+
+6. **目的状语**：不定式可以用来表示动作的目的或原因。例如：
+   - "I went to the store to buy some groceries."
+   - "He studied hard to pass the exam."
+
+7. **结果状语**：不定式可以用来表示动作的结果。例如：
+   - "He ran so fast as to win the race."
+
+8. **条件状语**：不定式可以用来表示条件。例如：
+   - "To pass the test, you must study."
+
+9. **方式状语**：不定式可以用来表示动作的方式。例如：
+   - "She spoke softly to avoid waking the baby."
+
+10. **时间状语**：虽然较少见，不定式有时可以用来表示时间。例如：
+   - "I woke up early to catch the sunrise."
+
+总之，不定式是多功能的语法结构，可以用于丰富句子的表达方式，根据上下文和需要，在句子中扮演不同的角色。
+
 2. **动名词（Gerund）：** 动名词是动词加上 "-ing" 形式的结尾，可以作为名词的形式出现在句子中，通常作为主语、宾语、介词的宾语等。例如：
    - **Swimming** is good exercise. （动名词作为主语）
    - I enjoy **reading** books. （动名词作为宾语）
