非谓语动词

--- a/动词.md
+++ b/动词.md
@@ -23,7 +23,9 @@
 
 非谓语动词是指动词的非限定形式，不受主语的人称和数的限制，可以作为句子中的其他成分，如主语、宾语、状语等。英语中的非谓语动词包括动词的三种基本形式：不定式（infinitive）、动名词（gerund）和过去分词（past participle）。下面是关于这三种形式的更详细解释：
 
-1. **不定式（Infinitive）：** 不定式是动词的原形，通常带有 "to"。在句子中可以作为动词的宾语、目的状语、目的补语等。例如：
+### **不定式（Infinitive）：**
+
+不定式是动词的原形，通常带有 "to"。在句子中可以作为动词的宾语、目的状语、目的补语等。例如：
    - She wants **to dance** at the party. （不定式作为目的状语）
    - His goal is **to become** a doctor. （不定式作为目的补语）
 
@@ -31,21 +33,21 @@
 
 在英语中，不定式（infinitive）通常以"to"开头，但有些情况下可以省略"to"。以下是一些情况：
 
-   1. **情态动词后**：当不定式跟在情态动词（modal verbs）如can, could, may, might, will, would, shall, should, must等后面时，通常省略"to"。例如：
-      - She can swim.（可以省略："She can to swim."）
-      - He must go now.（可以省略："He must to go now."）
+ 1. **情态动词后**：当不定式跟在情态动词（modal verbs）如can, could, may, might, will, would, shall, should, must等后面时，通常省略"to"。例如：
+    - She can swim.（可以省略："She can to swim."）
+    - He must go now.（可以省略："He must to go now."）
 
-   2. **感官动词后**：感官动词（sensory verbs）如see, hear, feel, watch, notice等后面，不定式也可以省略"to"。例如：
-      - I saw him go.（可以省略："I saw him to go."）
-      - She heard the birds sing.（可以省略："She heard the birds to sing."）
+ 2. **感官动词后**：感官动词（sensory verbs）如see, hear, feel, watch, notice等后面，不定式也可以省略"to"。例如：
+    - I saw him go.（可以省略："I saw him to go."）
+    - She heard the birds sing.（可以省略："She heard the birds to sing."）
 
-   3. **让步状语从句中**：在让步状语从句中，不定式常常省略"to"。例如：
-      - He was too tired to walk.（不定式不省略）
-      - He was so tired he couldn't walk.（不定式省略）
+ 3. **让步状语从句中**：在让步状语从句中，不定式常常省略"to"。例如：
+    - He was too tired to walk.（不定式不省略）
+    - He was so tired he couldn't walk.（不定式省略）
 
-   4. **动词感官性的用法**：有些动词在特定情况下可以用作感官性动词，此时不定式也可以省略"to"。这些动词包括make, let, have等。例如：
-      - She made him sing.（可以省略："She made him to sing."）
-      - They had him explain.（可以省略："They had him to explain."）
+ 4. **动词感官性的用法**：有些动词在特定情况下可以用作感官性动词，此时不定式也可以省略"to"。这些动词包括make, let, have等。例如：
+    - She made him sing.（可以省略："She made him to sing."）
+    - They had him explain.（可以省略："They had him to explain."）
 
 需要注意的是，这些规则有时会因上下文而变化，所以在一些情况下，省略"to"可能不合适。但是，上述情况是一般的使用规则，通常可以作为参考。
 
@@ -58,6 +60,7 @@
 2. **宾语**：不定式可以用作动词的宾语。例如：
    - "She wants to travel."
    - "I like to read."
+   - 形式宾语 "I consider it important to eat a carrot every day."
 
 3. **主语补语**：不定式可以用来补充说明主语。例如：
    - "His goal is to become a doctor."
@@ -87,13 +90,78 @@
 
 总之，不定式是多功能的语法结构，可以用于丰富句子的表达方式，根据上下文和需要，在句子中扮演不同的角色。
 
-2. **动名词（Gerund）：** 动名词是动词加上 "-ing" 形式的结尾，可以作为名词的形式出现在句子中，通常作为主语、宾语、介词的宾语等。例如：
+使役动词接不定式省略to
+
+### **动名词（Gerund）：**
+
+动名词是动词加上 "-ing" 形式的结尾，可以作为名词的形式出现在句子中，通常作为主语、宾语、介词的宾语等。例如：
    - **Swimming** is good exercise. （动名词作为主语）
    - I enjoy **reading** books. （动名词作为宾语）
 
-3. **过去分词（Past Participle）：** 过去分词通常用于完成时态和被动语态的构成，也可以作为形容词。例如：
+有一些动词后只能使用动名词（-ing 形式）作为宾语，而不是不定式（to + 动词原形）或其他形式的宾语。这些动词通常与感觉、看待、认为、听到、注意到等心理状态或感知动作相关。以下是一些常见的这类动词：
+
+1. **Enjoy**（享受）：I enjoy swimming.（我喜欢游泳。）
+
+2. **Mind**（介意）：She doesn't mind waiting.（她不介意等待。）
+
+3. **Admit**（承认）：He admitted making a mistake.（他承认犯了个错误。）
+
+4. **Avoid**（避免）：They avoid eating fast food.（他们避免吃快餐。）
+
+5. **Consider**（考虑）：I'm considering changing my job.（我在考虑换工作。）
+
+6. **Suggest**（建议）：She suggested going to the beach.（她建议去海滩。）
+
+7. **Recommend**（推荐）：I recommend trying the new restaurant.（我推荐尝试新餐厅。）
+
+8. **Can't help**（禁不住）：I can't help laughing.（我禁不住笑了。）
+
+9. **Imagine**（想象）：I can't imagine living in a big city.（我无法想象住在大城市。）
+
+10. **Miss**（错过）：I missed seeing you yesterday.（昨天我错过了见你。）
+
+这些动词后跟动名词，因为它们通常表示一种感知、情感、看法或认知的过程，而这些过程往往需要使用动名词来表达。注意，其他语言可能有不同的规则，所以在学习英语时要注意这些特殊的动词和它们的用法。
+
+除了单个动词，还有一些固定的词组或短语，通常只能使用动名词（-ing 形式）作为宾语。这些词组包括：
+
+1. **Be used to**（习惯于）：She is used to waking up early.（她习惯早起。）
+
+2. **Look forward to**（期待）：I look forward to meeting you.（我期待见到你。）
+
+3. **Be worth**（值得）：This book is worth reading.（这本书值得一读。）
+
+4. **Can't stand**（无法忍受）：I can't stand waiting in long lines.（我无法忍受排长队等待。）
+
+5. **Feel like**（想要）：I feel like going for a walk.（我想出去散步。）
+
+6. **Give up**（放弃）：She gave up smoking.（她戒烟了。）
+
+7. **Keep on**（继续）：They kept on talking all night.（他们整晚都在聊天。）
+
+8. **Look forward to**（期待）：We look forward to seeing you again.（我们期待再次见到你。）
+
+9. **Be interested in**（对…感兴趣）：He's interested in learning new languages.（他对学习新语言感兴趣。）
+
+10. **Be good at**（擅长）：She's good at singing.（她擅长唱歌。）
+
+这些词组的特点是它们的结构和用法固定，通常后面只能跟动名词作为宾语。这些短语中的动名词起到名词的作用，因此使用动名词更合适。
+
+### 现在分词
+
+a sleeping pill 这里的sleeping是动名词，用来说明药片的性质，功能和用途相当于 a pill for sleeping
+
+a sleeping rabbit 不等于 a rabbit for sleeping 它是现在分词，相当于形容词修饰rabbit的状态
+
+The story is interesting. 由interest  v. -> adj.
+
+### **过去分词（Past Participle）：**
+
+过去分词通常用于完成时态和被动语态的构成，也可以作为形容词。例如：
    - She has **written** a novel. （过去分词用于完成时态）
    - The broken vase needs to be **repaired**. （过去分词用于被动语态）
    - The **broken** vase is on the table. （过去分词作为形容词）
+
+I am interesting. 我引起某人的兴趣。
+I am interested. 我被某人某物引起了兴趣。
 
 这些非谓语动词形式在句子中的使用具有一定的语法和语义特点，需要根据上下文和句子结构来正确运用。
