--- a/句子成分&句子分类.md
+++ b/句子成分&句子分类.md
@@ -34,6 +34,8 @@
    - 补语在句子中不是必需的，但它们可以增加句子的信息。
    - 例如："He is a **doctor**."（他是医生。） - 补语是 "doctor"。
 
+# 句子
+
 根据句子的结构和功能，句子可以分为不同的类型，主要有以下几种句子分类：
 
 1. **陈述句（Declarative Sentences）**：
@@ -44,23 +46,91 @@
    - 疑问句用来提问，通常以疑问词（who, what, when, where, why, how）开头。
    - 例如："Where is the nearest gas station?"（最近的加油站在哪里？）
 
-3. **祈使句（Imperative Sentences）**：
-   - 祈使句用来表达请求、命令、建议或劝告，通常省略了主语（你）。
-   - 例如："Close the door."（关上门。）
+## **祈使句（Imperative Sentences）**：
 
-4. **感叹句（Exclamatory Sentences）**：
+祈使句（Imperative Sentences）是用来表达命令、请求、劝告、建议或邀请等目的的句子类型。祈使句通常以动词原形（不带主语 "you"）开头，直接命令或请求对方采取某种行动。
+
+1. **Come（来）**：
+   - "Come to the party tonight."（今晚来参加聚会。） - 邀请
+   - "Come here and help me."（过来帮我一下。） - 请求
+
+2. **Look（看）**：
+   - "Look at the beautiful sunset."（看那美丽的日落。） - 邀请
+   - "Look before you leap."（三思而后行。） - 劝告
+
+3. **Go（去）**：
+   - "Go to the store and buy some milk."（去商店买点牛奶。） - 命令
+   - "Go ahead and take a break."（去休息一下吧。） - 鼓励
+
+4. **Wait（等待）**：
+   - "Wait for me at the corner."（在拐角处等我。） - 请求
+   - "Wait your turn in line."（排队等候你的轮次。） - 命令
+
+5. **Do（做）**：
+   - "Do your homework before watching TV."（在看电视之前先做作业。） - 劝告
+   - "Do as I say."（照我说的做。） - 命令
+
+6. **Be（是）**：
+   - "Be quiet in the library."（在图书馆要安静。） - 命令
+   - "Be yourself."（做你自己。） - 劝告
+
+7. **Let's（让我们）**：
+   - "Let's go for a walk in the park."（让我们去公园散步。） - 邀请
+   - "Let's finish this project by the end of the day."（让我们今天结束这个项目。） - 建议
+
+8. **Don't（不要）**：
+   - "Don't touch that hot stove."（不要触摸那个热炉子。） - 命令
+   - "Don't be late for the meeting."（不要迟到会议。） - 命令
+   - "Don't forget to call me."（不要忘记给我打电话。） - 提醒
+   - "Don't worry about it."（不要担心。） - 安慰
+
+9. **Take（拿）**：
+   - "Take this medicine."（拿这个药。） - 命令
+   - "Take a seat."（请坐。） - 邀请
+
+10. **Bring（带来）**：
+   - "Bring me a glass of water."（给我带一杯水来。） - 请求
+   - "Bring your ID card to the office."（带你的身份证到办公室。） - 命令
+
+11. **Give（给予）**：
+   - "Give me a hand, please."（请帮我个忙。） - 请求
+   - "Give your sister the book."（把书给你妹妹。） - 命令
+
+12. **Open（打开）**：
+   - "Open the door."（打开门。） - 命令
+   - "Open your heart to new experiences."（敞开心扉迎接新经历。） - 建议
+
+13. **Close（关闭）**：
+   - "Close the window."（关闭窗户。） - 命令
+   - "Close your eyes and make a wish."（闭上眼睛许个愿望。） - 建议
+
+14. **Stop（停止）**：
+   - "Stop talking during the movie."（电影时停止说话。） - 命令
+   - "Stop worrying about the future."（停止担心未来。） - 劝告
+
+15. **Wait（等待）**：
+   - "Wait for the signal to cross the street."（等待信号来过马路。） - 命令
+   - "Wait for me at the restaurant."（在餐厅等我。） - 请求
+
+16. **Be sure to（一定要）**：
+   - "Be sure to call me when you arrive."（一定要在到达时给我打电话。） - 请求
+   - "Be sure to lock the door when you leave."（一定要在离开时锁上门。） - 建议
+
+
+
+## **感叹句（Exclamatory Sentences）**：
    - 感叹句用来表达强烈的情感或惊讶，通常以感叹号结尾。
    - 例如："What a beautiful sunset!"（多么美丽的日落啊！）
 
-5. **条件句（Conditional Sentences）**：
+2. **条件句（Conditional Sentences）**：
    - 条件句用来表达条件和结果之间的关系，通常包括一个条件从句和一个结果从句。
    - 例如："If it rains, we will stay at home."（如果下雨，我们会呆在家里。）
 
-6. **复合句（Complex Sentences）**：
+3. **复合句（Complex Sentences）**：
    - 复合句由一个主句和一个或多个从句组成，从句可以是定语从句、状语从句、宾语从句等。
    - 例如："I will visit the museum when I have time."（我会在有时间的时候参观博物馆。）
 
-7. **并列句（Compound Sentences）**：
+4. **并列句（Compound Sentences）**：
    - 并列句由两个或多个主句并列在一起，通常用连词（and, but, or, so, yet）连接。
    - 例如："She wanted to go shopping, but her friend preferred to stay home."（她想去购物，但她的朋友更愿意呆在家里。）
 
