--- a/时态.md
+++ b/时态.md
@@ -2,11 +2,13 @@
 
 ## 一般现在时 (Simple Present):
 
-- **用法**：表示经常性、习惯性的动作或客观真理。
+- **用法**：表示经常性、习惯性的动作或客观真理。一般性的事实，有时或经常发生的事情。
 - **结构**：主语 + 动词原形（第三人称单数加-s）。
 - **例句**：
   - He likes to play soccer. (他喜欢踢足球。)
   - The sun rises in the east. (太阳从东方升起。)
+
+always/never/often/usually/sometimes 常与一般现在时连用。
 
 ## 现在进行时 (Present Continuous/Progressive):
 
