--- a/副词.md
+++ b/副词.md
@@ -1,30 +1,38 @@
 # 副词
 
-副词（Adverb）是一类用来修饰动词、形容词、其他副词、句子或整个句子的词汇。副词通常用来描述或限定动作的方式、时间、地点、程度等。它在句子中扮演着修饰成分的角色，可以帮助我们更详细地理解动作或描述的情况。
+![fuci](./img/fuci.png)
 
-以下是副词的几个常见分类及其详细解释：
+副词（Adverbs）是一类用来修饰动词、形容词、其他副词或整个句子的词汇。副词的作用是提供关于动作、状态、程度、时间、地点、原因等方面的信息，以增强句子的描述力和明确性。以下是有关副词的详细解释：
 
-1. **程度副词（Adverbs of Degree）**：这类副词用来描述动作或状态的程度，表达强度或程度的差异。
-   - Example: very（非常），too（太），quite（相当），extremely（极其），almost（几乎），so（如此），rather（相当），enough（足够）等。
+1. **修饰动词**：副词通常用来修饰动词，提供关于动作如何发生的信息，包括动作的方式、频率、程度等。
 
-2. **时间副词（Adverbs of Time）**：这些副词描述动作发生的时间或频率。
-   - Example: now（现在），soon（很快），today（今天），always（总是），often（经常），never（从不），already（已经），still（仍然），yesterday（昨天）等。
+   - 例如："She sings **beautifully**."（她唱得美妙。） - 副词 "beautifully" 描述了动词 "sings" 的方式。
 
-3. **地点副词（Adverbs of Place）**：这类副词描述动作发生的地点或位置。
-   - Example: here（这里），there（那里），everywhere（到处），nowhere（无处），somewhere（某处），anywhere（任何地方）等。
+2. **修饰形容词**：副词也可以修饰形容词，提供有关特征或性质的信息。
 
-4. **方式副词（Adverbs of Manner）**：这些副词描述动作的方式、方法或风格。
-   - Example: quickly（快速地），carefully（小心地），happily（快乐地），loudly（大声地），softly（轻声地）等。
+   - 例如："He is **very** tall."（他非常高。） - 副词 "very" 修饰形容词 "tall"。
 
-5. **原因副词（Adverbs of Reason）**：这类副词描述为什么发生了某个动作。
-   - Example: because（因为），therefore（因此），so（所以），thus（如此），hence（因此）等。
+3. **修饰其他副词**：有时副词也可以修饰其他副词，以强调或修饰它们的含义。
 
-6. **数量副词（Adverbs of Quantity）**：这些副词描述动作的数量或程度。
-   - Example: much（很多），little（很少），enough（足够），more（更多），less（更少），almost（几乎）等。
+   - 例如："She sings **extremely** well."（她唱得极好。） - 副词 "extremely" 修饰副词 "well"。
 
-7. **疑问副词（Interrogative Adverbs）**：这类副词用来引导疑问句，询问关于时间、地点、原因、方式等的问题。
-   - Example: when（何时），where（何地），why（为什么），how（如何），how often（多久一次），how much（多少），how many（多少）等。
+4. **修饰整个句子**：一些副词被称为句子副词（Sentence Adverbs），它们修饰整个句子，而不是特定的词汇。这些副词用来表示说话者的态度、观点或对整个情况的看法。
 
-副词可以单独出现在句子中，也可以与其他副词或短语一起形成副词短语，进一步修饰动词、形容词或其他副词。在句子中，副词通常位于动词之前，或者在情况特殊时位于句首或句末。
+   - 例如："Certainly, I can help you."（当然，我可以帮助你。） - 副词 "certainly" 表示说话者的确认和同意。
 
-总之，副词在语言表达中扮演着重要的角色，帮助我们更具体地描述动作的方式、时间、地点、程度等，从而使句子更加丰富和清晰。
+5. **副词的分类**：副词可以根据其功能和含义分类。以下是一些常见的副词分类：
+   - **方式副词（Adverbs of Manner）**：描述动作的方式，例如 "quickly"（迅速地）、"carefully"（小心地）。
+   - **时间副词（Adverbs of Time）**：描述动作发生的时间，例如 "now"（现在）、"soon"（很快）。
+   - **地点副词（Adverbs of Place）**：描述动作发生的地点，例如 "here"（这里）、"everywhere"（到处）。
+   - **程度副词（Adverbs of Degree）**：描述动作或状态的程度，例如 "very"（非常）、"quite"（相当）。
+   - **频率副词（Adverbs of Frequency）**：描述动作发生的频率，例如 "always"（总是）、"sometimes"（有时）。
+   - **原因副词（Adverbs of Reason）**：描述动作发生的原因，例如 "therefore"（因此）、"because"（因为）。
+
+6. **副词的形成**：一些副词可以通过在形容词的基础上添加后缀 "-ly" 来形成，例如 "quick"（形容词）变为 "quickly"（副词）。
+
+7. **副词的位置**：通常，副词放在动词之后，但在其他词汇之前。然而，有些副词可以放在不同的位置，以改变句子的含义或强调。
+
+   - 例如："She **quickly** finished the race."（她迅速完成了比赛。）
+   - 例如："Quickly, she finished the race."（迅速地，她完成了比赛。）
+
+副词在句子中具有重要作用，可以提供额外信息，使句子更加详细和准确。了解不同类型的副词及其用法可以帮助你更好地表达自己的意思，使语言更具表现力。
