--- a/助动词.md
+++ b/助动词.md
@@ -33,4 +33,118 @@
    - 例如："He **can** swim."（他会游泳。）（表示能力）
    - 例如："You **should** study for the exam."（你应该为考试学习。）（表示建议）
 
-助动词在句子中起到关键的作用，帮助构建不同时态、语态和情态的句子。它们通常与主动词一起使用，以表达更精确的含义和语法结构。了解助动词的用法对于理解和使用英语中的不同句型和时态非常重要。
+## will
+
+当使用 "will" 作为助动词时，它可以应用于不同的情况，以下是每种情况的示例：
+
+1. **将来时态：**
+   - "I will call you later."（我将会给你打电话。） - 表示将来的意愿或计划。
+   - "She will arrive at the airport at 5 PM."（她将在下午5点到达机场。） - 表示将来的事件。
+
+2. **情态动词：**
+   - "You will need to study for the exam."（你需要为考试而学习。） - 表示必要性或建议。
+   - "He will probably arrive late."（他可能会迟到。） - 表示可能性。
+
+3. **愿望或意愿：**
+   - "I will help you with your project."（我愿意帮助你完成项目。） - 表示意愿。
+   - "Will you please forgive me?"（你能原谅我吗？） - 表示请求或愿望。
+
+4. **请求或命令：**
+   - "Will you please pass me the salt?"（你能请把盐递给我吗？） - 表示请求。
+   - "You will finish your homework before you go out."（在出去之前你必须完成作业。） - 表示命令或规定。
+
+## shall 
+
+当使用 "shall" 作为助动词时，它也可以应用于不同的情况，以下是每种情况的示例：
+
+1. **将来时态：**
+   - "Shall we go for a walk tomorrow?"（我们明天去散步好吗？） - 表示提出建议或提议。
+   - "I shall arrive at the party by 7 PM."（我将在晚上7点前到达派对。） - 表示未来的事件或计划。
+
+2. **情态动词：**
+   - "Shall I help you with your bags?"（我帮你提行李吗？） - 表示提供帮助的建议。
+   - "You shall not pass!"（你不得通过！） - 表示命令或禁止。
+
+3. **询问意见或建议：**
+   - "What shall we have for dinner tonight?"（我们今晚吃什么好呢？） - 表示询问意见。
+   - "Shall we book tickets for the concert?"（我们应该预订音乐会的门票吗？） - 表示提出建议。
+
+4. **法律、规则或契约中的义务：**
+   - "The parties shall abide by the terms of the contract."（各方应遵守合同的条款。） - 表示法律或合同中的义务。
+
+## will/shall
+
+"Shall" 和 "will" 都可以用来表示将来的意愿、承诺或预测，但它们在使用上有一些区别，特别是在不同地区和语境中。
+"shall" 和 "will" 在语法上可以互换使用，但在实际使用中，它们的含义和语境可能会有所不同。在美国英语中，"will" 更为通用，而在英国英语和一些正式文本中，"shall" 更常见。
+
+1. **地区差异：**
+   - "Shall" 在美国英语中使用较少，而在英国英语中更为常见。在美国英语中，通常使用 "will" 来表示未来意愿和承诺。
+   - 在某些英国英语方言和正式文本中，"shall" 用于表示未来的意愿或建议，特别是在第一人称（I 和 we）的疑问句和陈述句中。
+
+2. **正式与非正式：**
+   - "Shall" 有时被认为比 "will" 更为正式，特别是在提出建议或提议时。因此，在正式文书、法律文件、规则和合同中，"shall" 常常被用来表示义务或规定。
+
+3. **疑问句中的建议：**
+   - "Shall" 在疑问句中经常用来提出建议或提议，特别是在第一人称（I 和 we）中。例如："Shall we go to the park?"（我们去公园好吗？） 这表示提出了一种建议或提议。
+
+4. **命令或规定：**
+   - "Shall" 有时用于表示命令或规定，尤其在法律和正式文件中。例如："You shall not enter without permission."（未经允许，你不得进入。）
+## might/may
+
+"Might" 和 "may" 都是用来表示可能性、许可或请求的情态动词，但它们在使用上有一些区别：
+
+1. **可能性：**
+   - "Might" 和 "may" 都可以用来表示可能性，但 "might" 表示的可能性稍微较小或更不确定。 "Might" 暗示了一种较小的可能性，或者是对某事的怀疑。
+   - 例如：
+     - "It might rain this afternoon."（今天下午可能会下雨，但不确定。）
+     - "She may be at home."（她可能在家，可能性较大。）
+
+2. **许可：**
+   - "May" 更常用于表示请求或许可。当使用 "may" 时，通常是在请求或征求允许时。
+   - 例如：
+     - "May I borrow your pen?"（我可以借你的笔吗？） - 表示请求允许。
+     - "You may leave the room now."（你可以离开房间了。） - 表示许可。
+
+3. **正式与非正式：**
+   - "May" 更常用于正式和礼貌的场合，而 "might" 在非正式场合也可以用来表示可能性或请求。
+   - 例如，在正式场合，比如写信或在正式会话中，人们可能更倾向于使用 "may"，而在日常对话中，使用 "might" 也是可以接受的。
+
+总之，"might" 和 "may" 都可以表示可能性，但 "might" 表示的可能性较小或更不确定，而 "may" 更常用于请求或许可，具体的使用取决于语境和语气。
+
+## can/could
+
+"Can" 和 "could" 也是情态动词，用于表示能力、可能性、请求和许可。以下是它们的主要区别：
+
+1. **Can (能够 / 可以)**:
+   - "Can" 表示当前的能力或可能性，通常用于描述能够做某事的能力。
+   - 例如："I can swim."（我会游泳。） - 表示当前的能力。
+   - "Can you help me?"（你能帮助我吗？） - 表示请求。
+
+2. **Could (能够 / 可以 / 过去的能力)**:
+   - "Could" 通常表示过去的能力、可能性，或者用于更客气地表达请求。
+   - 例如："When I was young, I could run very fast."（在我年轻时，我能跑得很快。） - 表示过去的能力。
+   - "Could you please pass the salt?"（你能请递给我盐吗？） - 表示请求并显得更加礼貌。
+
+总的来说，"can" 表示当前的能力和可能性，而 "could" 通常表示过去的能力、更客气的请求或更不确定的可能性。但根据具体的语境和语气，它们也可以在某些情况下互换使用。
+
+## must/should
+
+"Must," "need to," "should," 和 "have to" 都是用于表示义务、建议和必要性的情态动词或短语，但它们之间有一些区别：
+
+1. **Must (必须)**:
+   - "Must" 表示强烈的内在义务或规定，通常用于表示某事是绝对必要的，没有选择余地。
+   - 例如："You must wear a seatbelt while driving."（驾驶时必须系安全带。）
+
+2. **Need to (需要)**:
+   - "Need to" 表示某事是必要的，但它通常带有一种更为中性的语气，相对于 "must" 来说，更灵活，有时可以选择不去做。
+   - 例如："You need to finish your homework before bedtime."（睡觉前你需要完成作业。）
+
+3. **Should (应该)**:
+   - "Should" 表示建议或合理的期望，但没有强制性。它用于表示某事是明智的选择，但不一定是义务。
+   - 例如："You should eat more vegetables for better health."（为了更好的健康，你应该多吃蔬菜。）
+
+4. **Have to (不得不 / 必须)**:
+   - "Have to" 表示外在的义务或强制性的要求，通常是由外部因素、规则或法律所决定的。
+   - 例如："I have to go to work tomorrow."（我明天必须去工作。）
+
+总的来说，这些情态动词和短语在语气和义务程度上有所不同。"Must" 是最强烈的，表示绝对必要，没有选择；"need to" 表示必要性，但有一定的灵活性；"should" 表示建议和合理的期望，但没有强制性；"have to" 表示外部的强制性要求。选择哪个取决于具体情境和所要表达的程度。
