--- a/限定词.md
+++ b/限定词.md
@@ -38,3 +38,7 @@
      - 例如："He has **no** time for meetings today."（他今天没有时间开会。）
 
 限定词在句子中用于帮助确定名词的数量、特性和所指对象。正确使用限定词对于准确表达意思非常重要，因为它们可以帮助消除歧义，使句子更加明确和具体。
+
+## the
+
+不使用the（泛指，体育活动，语言，科学）
