--- a/助动词.md
+++ b/助动词.md
@@ -53,6 +53,31 @@
    - "Will you please pass me the salt?"（你能请把盐递给我吗？） - 表示请求。
    - "You will finish your homework before you go out."（在出去之前你必须完成作业。） - 表示命令或规定。
 
+**扩展**
+
+- will do/be doing/have done
+
+      当涉及到表示未来时态时，"will do"（将要做），"will be doing"（将要正在做），和 "will have done"（将要已经做完）分别表示不同的情境，以下是它们的区别：
+
+      1. **Will do**（将要做）：
+         - **简单将来时**： "Will do" 用于表示将来某个时间点会发生的简单动作或事件，不强调动作的持续性。
+         - 例句： "I will call you tomorrow."（我明天会给你打电话。）
+
+      2. **Will be doing**（将要正在做）：
+         - **将来进行时**： "Will be doing" 用于指示将来某个具体时间点正在进行中的动作，强调动作的持续性。
+         - 例句： "At 3 PM tomorrow, I will be working on a project."（明天下午3点，我将会正在进行一个项目。）
+
+      3. **Will have done**（将要已经做完）：
+         - **将来完成时**： "Will have done" 用于描述在未来某个时间点或其他未来动作之前将完成的动作，强调在指定时间之前完成的动作。
+         - 例句： "By the time you arrive, I will have finished my work."（等你到达的时候，我将已经完成我的工作。）
+
+      总结：
+      - **Will do** 用于表示简单未来动作。
+      - **Will be doing** 用于表示将来进行中的动作。
+      - **Will have done** 用于表示在未来某个时间点之前完成的动作。
+
+      选择这些形式取决于上下文以及你想要传达的关于未来动作时间和性质的信息。
+
 ## shall 
 
 当使用 "shall" 作为助动词时，它也可以应用于不同的情况，以下是每种情况的示例：
@@ -125,7 +150,35 @@
    - 例如："When I was young, I could run very fast."（在我年轻时，我能跑得很快。） - 表示过去的能力。
    - "Could you please pass the salt?"（你能请递给我盐吗？） - 表示请求并显得更加礼貌。
 
-总的来说，"can" 表示当前的能力和可能性，而 "could" 通常表示过去的能力、更客气的请求或更不确定的可能性。但根据具体的语境和语气，它们也可以在某些情况下互换使用。
+**扩展**
+
+- "can"、"could" 和 "be able to"
+  1. **Can**（能够）：
+     - **现在的能力**： "Can" 用于表示当前的能力或才能，表明你在当前时刻有能力或有技能做某事。
+       - 例句： "I can swim."（我会游泳。）
+
+  2. **Could**（能够）：
+     - **过去的能力**： "Could" 用于表示过去的能力或才能，表明你曾经具备过做某事的技能。
+       - 例句： "When I was a child, I could swim."（当我还是个孩子的时候，我会游泳。）
+
+     - **礼貌的请求**： "Could" 也可用于礼貌地提出请求或征得许可。
+       - 例句： "Could you please pass the salt?"（请你递一下盐，好吗？）
+
+  3. **Be able to**（能够）：
+     - **一般的能力**： "Be able to" 是一个更通用的表达能力或才能的方式，可以在当前和过去的情境中使用。
+       - 例句 1（现在）："I am able to swim."（我能够游泳。）
+       - 例句 2（过去）："I was able to finish the project on time."（我曾经能够按时完成项目。）
+
+     - **未来可能性**：它还可以暗示未来可能会做某事。
+       - 例句："I will be able to attend the meeting tomorrow."（明天我将能够参加会议。）
+
+  总结一下：
+  - "Can" 用于表示现在的能力。
+  - "Could" 用于表示过去的能力和礼貌的请求。
+  - "Be able to" 是一个更通用的表达能力的方式，可用于各种情境，包括现在、过去和未来。
+
+  请注意，选择这些词语取决于具体的语境和你句子的意图。
+
 
 ## must/should
 
