--- a/助动词.md
+++ b/助动词.md
@@ -134,6 +134,9 @@
    - "May" 更常用于正式和礼貌的场合，而 "might" 在非正式场合也可以用来表示可能性或请求。
    - 例如，在正式场合，比如写信或在正式会话中，人们可能更倾向于使用 "may"，而在日常对话中，使用 "might" 也是可以接受的。
 
+4. 当情况是虚拟的时候，只能用might不能用may
+   - e.g. If they paid me better, I might work harder.
+
 总之，"might" 和 "may" 都可以表示可能性，但 "might" 表示的可能性较小或更不确定，而 "may" 更常用于请求或许可，具体的使用取决于语境和语气。
 
 ## can/could
@@ -185,7 +188,7 @@
 "Must," "need to," "should," 和 "have to" 都是用于表示义务、建议和必要性的情态动词或短语，但它们之间有一些区别：
 
 1. **Must (必须)**:
-   - "Must" 表示强烈的内在义务或规定，通常用于表示某事是绝对必要的，没有选择余地。
+   - "Must" 表示强烈的内在义务或规定，通常用于表示某事是绝对必要的，没有选择余地。must 不用来谈论过去。
    - 例如："You must wear a seatbelt while driving."（驾驶时必须系安全带。）
 
 2. **Need to (需要)**:
@@ -201,3 +204,17 @@
    - 例如："I have to go to work tomorrow."（我明天必须去工作。）
 
 总的来说，这些情态动词和短语在语气和义务程度上有所不同。"Must" 是最强烈的，表示绝对必要，没有选择；"need to" 表示必要性，但有一定的灵活性；"should" 表示建议和合理的期望，但没有强制性；"have to" 表示外部的强制性要求。选择哪个取决于具体情境和所要表达的程度。
+
+**扩展**
+
+"Mustn't" 和 "don't have to" 是两种表示不必要性的短语，但它们在用法上有不同之处：
+
+1. **Mustn't（必须不）：**
+   - "Mustn't" 是 "must not" 的缩写，表示禁止或强制不允许做某事。它通常用于强调某种禁令或规则。
+   - 例如，"You mustn't smoke in this area" 意味着在该区域内吸烟是被禁止的，是不被允许的。
+
+2. **Don't have to（不必要）：**
+   - "Don't have to" 表示没有必要做某事，但仍然允许做。它通常用于表达某种行动是可选的，没有强制要求。
+   - 例如，"You don't have to come to the meeting if you don't want to" 意味着你可以选择不来参加会议，但如果你愿意，你仍然可以来。
+
+总结起来，"mustn't" 表示某事是禁止的，而 "don't have to" 表示某事是可选的，没有强制要求。这两个短语的语境和含义有所不同，所以要根据具体情况使用合适的短语。
